syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = ".;proto";

service VideoService {
  rpc Feed (FeedRequest) returns (FeedResponse) {}
  rpc Publish (PublishRequest) returns (google.protobuf.Empty) {}
  rpc Video (VideoRequest) returns (VideoResponse) {}
  rpc PublishList (PublishListRequest) returns (PublishListResponse) {}
  rpc FeedByTopic (FeedByTopicRequest) returns (FeedResponse) {}
  rpc CategoryList (google.protobuf.Empty) returns (CategoryListResponse) {}
  rpc TopicList (google.protobuf.Empty) returns (TopicListResponse) {}
  rpc FeedByCategory (FeedByCategoryRequest) returns (FeedResponse) {}
  rpc FeedBySearch (FeedBySearchRequest) returns (FeedResponse) {}
}

message FeedRequest {
  google.protobuf.Timestamp latestTime = 1;
  int64 currentUserId = 2;
}

message FeedResponse {
  repeated Video videos = 1;
  google.protobuf.Timestamp nextTime = 2;
}

message PublishRequest {
  string description = 1;
  string playUrl = 2;
  string coverUrl = 3;
  int64 UserId = 4;
  repeated string topics = 5;
  int64 categoryId = 6;
}

message VideoRequest {
  int64 id = 1;
  int64 currentUserId = 2;
}

message VideoResponse {
  Video video = 1;
}

message PublishListRequest {
  int64 uid = 1;
  int64 currentUserId = 2;
}

message PublishListResponse {
  repeated MiniVideo videos = 1;
}

message Video{
  int64 id = 1;
  string description = 2;
  string playUrl = 3;
  string coverUrl = 4;
  int64 likeCount = 5;
  int64 commentCount = 6;
  int64 collectCount = 7;
  bool isLike = 8;
  User author = 9;
  repeated Topic topics = 10;
  google.protobuf.Timestamp publishTime = 11;
}

message MiniVideo{
  int64 id = 1;
  string coverUrl = 2;
  int64 likeCount = 3;
}

message Topic{
  int64 id = 1;
  string description = 2;
}

message User {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  string location = 4;
  bool isFollow = 5;
}

message FeedByTopicRequest {
  int64 topicId = 1;
  google.protobuf.Timestamp latestTime = 2;
  int64 currentUserId = 3;
}

message CategoryListResponse {
  repeated Category categories = 1;
}

message TopicListResponse {
  repeated Topic topics = 1;
}

message Category {
  int64 id = 1;
  string name = 2;
}

message FeedByCategoryRequest {
  int64 categoryId = 1;
  google.protobuf.Timestamp latestTime = 2;
  int64 currentUserId = 3;
}

message FeedBySearchRequest {
  string keyword = 1;
  google.protobuf.Timestamp latestTime = 2;
  int64 currentUserId = 3;
}
